# xcash

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  Makefile  README.en.md  README.md  conftest.py  docker-compose.dev.yml  docker-compose.dokploy.yml  docker-compose.yml  pyproject.toml
compose/production/django/: Dockerfile
config/: celery.py
config/settings/: base.py  dev.py  test.py  unfold.py
pay-fronted/: index.html  vite.config.js
pay-fronted/src/: App.jsx
pay-fronted/src/components/: ChainSelector.jsx  LogoMark.jsx  PaymentAddress.jsx  PaymentMethodSelector.jsx  PaymentStepper.jsx  StepCompleted.jsx  SummaryBar.jsx  TokenSelector.jsx  TronWalletPay.jsx  WaitingPayment.jsx  WalletPay.jsx
pay-fronted/src/hooks/: usePaymentMethod.js  useTronWalletPayment.js  useWalletPayment.js
pay-fronted/src/lib/: paymentMethodSort.js  tronWallet.js  wallet.js
pay-fronted/src/locales/: en.json  zh.json
scripts/: build-pay-fronted.sh  check-signer-no-runpython.sh  dev-bootstrap.sh  dev-signer-lint-migrations.sh  dev-signer-test.sh  dev-signer.sh  dev-up.sh  init_env.sh  upgrade.sh
signer/: .dockerignore  .gitignore  Dockerfile  SPEC.md  go.mod  go.sum  pyproject.toml
signer/cmd/signer/: main.go
signer/config/: settings.py
signer/internal/config/: config.go
signer/internal/crypto/: address.go  cipher.go  crypto_test.go  derive.go  parity_test.go  sign.go
signer/internal/httpapi/: audit.go  dto.go  errors.go  handlers.go  handlers_test.go  middleware.go  middleware_test.go  server.go
signer/internal/store/: audit.go  schema.sql  store.go  store_test.go
signer/internal/throttle/: limiter.go  replay.go  throttle_test.go
signer/testdata/: parity_vectors.json
signer/wallets/migrations/: 0001_initial.py  0002_alter_signeraddress_chain_type_and_more.py
xcash/alerts/: admin.py  models.py  service.py  tests.py
xcash/aml/migrations/: 0001_initial.py  0002_initial.py
xcash/chains/: adapters.py  admin.py  capabilities.py  constants.py  models.py  serializers.py  service.py  signer.py  tasks.py  tests.py  tests_constants.py  tests_models_refactor.py  transfer_matching.py  vault_slots.py
xcash/chains/migrations/: 0001_initial.py  0002_initial.py  0015_remove_bitcoin_data.py
xcash/common/: admin_scan_cursor.py  consts.py  decorators.py  error_codes.py  fields.py  internal_callback.py  logger.py  permission_check.py  throttles.py
xcash/common/tests/: test_decorators.py  test_permission_check.py
xcash/core/: admin.py  dashboard.py  dashboard_metrics.py  default_data.py  models.py  monitoring.py  runtime_settings.py  tasks.py  tests.py  tests_monitoring.py
xcash/core/migrations/: 0001_initial.py  0002_initial.py
xcash/currencies/: admin.py  models.py  service.py  signals.py  tests.py
xcash/currencies/migrations/: 0001_initial.py
xcash/deposits/: admin.py  models.py  service.py  tests.py  viewsets.py
xcash/deposits/migrations/: 0001_initial.py
xcash/evm/: adapter.py  admin.py  apps.py  choices.py  constants.py  contracts_codec.py  coordinator.py  db_triggers.py  intents.py  local_vault_slot.py  models.py  poller.py  saas_gas_billing.py  signals.py  tasks.py  vault_slots.py
xcash/evm/contracts/: .gitignore  Makefile  README.md  foundry.toml
xcash/evm/contracts/artifacts/: PaymentCollectorFactory.abi.json  PaymentCollectorFactory.json  (+7 more)
xcash/evm/internal_tx/: _log_utils.py  create2.py  direct_transfer.py  exceptions.py  handlers.py  matchers.py  processor.py  vault_slot_collect.py  withdrawal.py  x402.py
xcash/evm/migrations/: 0010_contractdeploycollection_collector_init_code.py
xcash/evm/scanner/: constants.py  erc20.py  logs.py  native.py  observed_transfers.py  rpc.py  service.py  watchers.py
xcash/evm/services/: create2.py  x402.py
xcash/evm/tests/: _fixtures.py  test_admin.py  test_broadcast_task.py  test_chain_scanner_service.py  test_choices.py  test_contracts_codec.py  test_coordinator.py  test_create2_idempotency.py  test_deposit_log_scanner.py  test_direct_transfer.py  test_erc20_scanner.py  test_evm_idempotency_migration.py  test_intents.py  test_internal_confirmation.py  test_internal_tx_lifecycle_refactor.py  test_native_deposit_scanner.py  test_nonce_concurrency.py  test_poller.py  test_reconcile.py  test_rpc.py  test_schedule.py  test_task_queue.py  test_tx_kind_migration.py  test_tx_task.py  test_vault_slot_tasks.py  test_watchers.py  test_x402_idempotency.py
xcash/internal_api/: urls.py
xcash/internal_api/serializers/: operations.py  projects.py  recipient_addresses.py  withdrawals.py
xcash/internal_api/tests/: test_deposits.py  test_invoices.py  test_pagination.py  test_project_update.py  test_withdrawals_feature_flag.py
xcash/internal_api/viewsets/: deposits.py  operations.py  withdrawals.py
xcash/invoices/: exceptions.py  models.py  serializers.py  service.py  tasks.py  tests.py  tests_epay.py  views.py  viewsets.py
xcash/invoices/migrations/: 0001_initial.py  0012_invoice_billing_mode.py
xcash/projects/: admin.py  models.py  service.py  tests.py  vault.py
xcash/projects/migrations/: 0001_initial.py
xcash/risk/: service.py  tests.py
xcash/saas_api/: urls.py
xcash/saas_api/serializers/: differ_addresses.py  projects.py
xcash/saas_api/tests/: test_differ_addresses.py  test_project_update.py
xcash/saas_api/viewsets/: deposits.py  differ_addresses.py  projects.py
xcash/static/pay/: index.html
xcash/stress/: evm.py  models.py  payment.py  service.py  tasks.py  tests.py
xcash/stress/migrations/: 0001_initial.py  0003_invoicestresscase_billing_mode_and_more.py
xcash/templates/admin/: operational_inspection.html
xcash/tron/: admin.py  client.py  codec.py  constants.py  intents.py  models.py  resources.py  saas_gas_billing.py  scanner.py  tasks.py  tests.py  vault_slots.py  watchers.py
xcash/tron/migrations/: 0001_initial.py
xcash/users/: admin.py  models.py  tests.py
xcash/users/migrations/: 0001_initial.py
xcash/webhooks/: models.py
xcash/webhooks/migrations/: 0001_initial.py
xcash/withdrawals/: admin.py  models.py  serializers.py  service.py  tests.py  viewsets.py
(+31 files in other folders)
