[tool.uv]
package = false

[project]
name = "xcash"
version = "0.5.1"
description = "Open-source self-hosted cryptocurrency payment gateway. Accept USDT, ETH. Zero platform fees, 100+ blockchains, Docker deploy, full self-custody."
requires-python = "==3.13.*"
dependencies = [
    "web3==7.16.0",
    "eth-abi==5.2.0",
    "base58==2.1.1",
    "bip-utils==2.12.1",
    "redis==8.0.0",
    "hiredis==3.3.1",
    "cryptography==48.0.0",
    "ulid-py==1.1.0",
    "argon2-cffi==25.1.0",
    "shortuuid==1.0.13",
    "httpx==0.28.1",
    # Django
    "django==5.2.14",
    "django-environ==0.13.0",
    "django-model-utils==5.0.0",
    "django-unfold==0.94.0",
    "django-sequences==3.0",
    "djangorestframework==3.17.1",
    "drf-extensions==0.8.0",
    "django-redis==6.0.0",
    "django-cors-headers==4.9.0",
    "django-smart-ratelimit[redis]==2.2.1",
    # Celery
    "celery==5.6.3",
    "django-celery-results==2.6.0",
    # Logging
    "structlog==25.5.0",
    "django-otp>=1.7.0",
    "qrcode>=8.2",
    "gunicorn==26.0.0",
    # 迁移文件在模块顶层 import IgnoreMigration，production migrate 必须能加载该符号；
    # 仅 dev settings 把它加入 INSTALLED_APPS，production 装而不启用，运行时无副作用。
    "django-migration-linter==6.0.0",
]
[dependency-groups]
dev = [
    "psycopg[binary]==3.3.4",
    "celery-types>=0.26.0",
    "django-extensions==4.1",
    "watchfiles==1.1.1",
    "werkzeug[watchdog]==3.1.6",
    "ipdb==0.13.13",
    # Testing
    "mypy==1.20.0",
    "django-stubs[compatible-mypy]==6.0.2",
    "pytest==8.3.5",
    "pytest-sugar==1.0.0",
    "djangorestframework-stubs[compatible-mypy]==3.16.9",
    # Documents
    "sphinx==9.1.0",
    "sphinx-autobuild==2025.8.25",
    # Code quality
    "ruff==0.15.12",
    "coverage==7.13.5",
    "djlint==1.36.4",
    "pylint-django==2.7.0",
    "pylint-celery==0.3",
    "pre-commit==4.5.1",
    # Django
    "factory-boy==3.3.3",
    "django-debug-toolbar==6.2.0",
    "django-coverage-plugin==3.2.0",
    "pytest-django==4.12.0",
    "vulture>=2.16",
]
production = [
    "psycopg[c]==3.3.4",
]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
# 根仓库 pytest 只负责主应用 xcash；独立 signer 需要在 signer/ 目录下按自己的 settings 单独执行。
testpaths = ["xcash"]
python_files = [
    "tests.py",
    "test_*.py",
    "tests_*.py",
]
filterwarnings = [
    "ignore:websockets\\.legacy is deprecated;.*:DeprecationWarning",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["xcash/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.13.9"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.dev"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*.py",
    "staticfiles/*"
]
# Same as Django: https://github.com/cookiecutter/cookiecutter-django/issues/4792.
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    'ISC',
    "ICN",
    "G",
    'INP',
    'PIE',
    "T20",
    'PYI',
    'PT',
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    # "ARG", # Unused function argument
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    # "NPY",
    # "AIR",
    "PERF",
    # "FURB",
    # "LOG",
    "RUF"
]
ignore = [
    "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "SIM102", # sometimes it's better to nest
    "PLR0913", # 限制参数为5个
    "E402", # import 必须在顶部
    "BLE001", # 异常捕获
    "RET505", # return后的else是不必要的，但本项目以代码逻辑清晰优先
    "SIM108",
    "E501", # Line too long
    "PGH004", # noqa
    "RUF001",
    "RUF002",
    "RUF003",
    "COM812", # 尾随逗号问题
    "PLR2004", # status code问题
    "RUF100", # noqa问题
    # 测试：项目使用 Django TestCase，必须用 unittest 风格断言（assertEqual/assertTrue 等）
    "PT009",
    "PT027",
    # 异常消息风格：项目全库直接在 raise 里写字符串，统一豁免
    "EM101",
    "EM102",
    "TRY003",
    # 测试/配置文件中的已知 hardcoded secret（测试凭据、设置默认值）
    "S105",
    "S106",
    # Django 测试里 _ 前缀参数模式，属于项目约定（49处）
    "PT019",
    # 测试代码 subprocess，属于预期行为
    "S603",
    # 跨层访问私有方法（service 调用 model 的 _helper 属于设计决策，非安全问题）
    "SLF001",
    # 中文注释常被误判为注释掉的代码，ERA001 在中文项目里误报率过高
    "ERA001",
    # 函数内 import（335 处），项目常用此技巧避免循环导入
    "PLC0415",
    # typing-only import（20 处），低价值性能优化
    "TC001",
    "TC003",
    # 未使用解包变量（11 处）
    "RUF059",
    # 函数复杂度过高（5 处），属于架构债
    "C901",
    # return/分支/语句过多（8 处），属于架构债
    "PLR0911",
    "PLR0912",
    "PLR0915",
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
# 声明本地 app，确保排序为 stdlib → third-party → first-party
known-first-party = [
    "alerts",
    "chains",
    "common",
    "config",
    "core",
    "currencies",
    "deposits",
    "evm",
    "invoices",
    "projects",
    "users",
    "webhooks",
    "withdrawals",
]
